Remove the profile selection
